export enum SCREENS {
  Welcome1 = "Welcome1",
  Welcome2 = "Welcome2",
  Login = "Login",
  Register = "Register",

  Home = "Home",
  Trending = "Trending",
  Search = "Search",
  Booking = "Booking",
  Profile = "Profile",

  // modals
  TermsAndConditionsModal = "TermsAndConditionsModal",
  SupportModal = "SupportModal",
}
